# CurrencyConverter

./: CMakeLists.txt  Converter.qml  CurrenclyListModelDelegate.qml  CurrencyEntry.cpp  CurrencyEntry.h  CurrencyListModel.cpp  CurrencyListModel.h  CurrencyTextField.qml  Main.qml  main.cpp
Assets/: default.json
